objects/ccrz__E_RecentItem__c.object
<CustomObject>
    <description>Recently visited products</description>
    <fields>
        <fullName>ccrz__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>Recent Items</relationshipLabel>
        <relationshipName>E_RECENT_ITEMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__RecentItemId__c</fullName>
        <externalId>true</externalId>
        <label>Recent Item Id</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>E_RECENT_ITEMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CC Recent Item</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>E_RECENT_ITEM Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Recent Items</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>